2011-10-26  Andre Wayand <aur-davical@awayand.sleepmail.com>

	* updated to latest version 0.9.9.7

2011-09-28  Andre Wayand <aur-davical@awayand.sleepmail.com>

	* updated to latest version 0.9.9.6
	* PKGBUILD now insists on specific awl version

2011-09-15  Andre Wayand <aur-davical@awayand.sleepmail.com>

	* added accidentally forgotten zenlord as past contributor back into PKGBUILD

2011-09-15  Andre Wayand <aur-davical@awayand.sleepmail.com>

	* modified PKGBUILD to accommodate new version

2011-07-25  Andre Wayand <aur-davical@awayand.sleepmail.com>

	* made apache and postgresql optional dependencies
	* added to backup() in PKGBUILD
	* default name for conf file in /etc/davical
	* split awl away from davical into separate package
	* install into /srv/http instead of /usr/share
	* created httpd-davical.conf
	* post-install documentation steps for setup