@@ -3,12 +3,12 @@
 # Contributor: Michael Seiwald <michael@mseiwald.at>
 pkgname=davical
 pkgver=0.9.9.7
-pkgrel=1
+pkgrel=2
 pkgdesc="CalDAV CardDAV Server"
 arch=('any')
 url="http://davical.org/"
 license=('GPL')
-depends=('php>=5.1' 'awl=0.49' 'php-pgsql' 'perl-dbd-pg' 'perl-yaml' 'perl-dbi')
+depends=('php>=5.1' 'awl>=0.49' 'php-pgsql' 'perl-dbd-pg' 'perl-yaml' 'perl-dbi')
 optdepends=(
 	'postgresql>=8.2: Run postgresql locally'
 	'apache>=1.3.0: Web server to run davical'
@@ -25,9 +25,6 @@ source=(
 	httpd-davical.conf
 	README.archlinux
 )
-md5sums=('bf1189064e43a061c3eaaebf4416fd8b'
-         'd268017114ce997488fc2f2978b4528d'
-         '22d7a93915a796a6fb8b509582abf188')
 
 package() {
   cd "${srcdir}/${pkgname}-${pkgver}"
