@@ -6,7 +6,7 @@ pkgdesc="A simple ePub reader made with pygtk."
 arch=('any')
 url="https://github.com/sakisds/pPub"
 license=('GPL')
-depends=('python' 'unzip' 'pygtk' 'pywebkitgtk')
+depends=('python2' 'unzip' 'pygtk' 'pywebkitgtk')
 makedepends=('git')
 
 _gitroot="git://github.com/sakisds/pPub.git"
