@@ -1,7 +1,7 @@
-# Contributor: Piotr Rogoża <rogoza.piotr@gmail.com>
+# Contributor: Piotr Rogoża <rogoza dot piotr at gmail dot com>
 pkgname=spawn-fcgi-php
 pkgver=1.1
-pkgrel=1
+pkgrel=2
 pkgdesc="script to provide simple cgi-php support for nginx http daemon"
 arch=('any')
 url="http://aur.archlinux.org/packages.php?ID=37439"
@@ -11,27 +11,30 @@ backup=('etc/conf.d/spawn-fcgi-php.conf')
 source=(
   'spawn-fcgi-php'
   'spawn-fcgi-php.conf'
-  'php.conf.example'
+  'server.conf.example'
   'nginx.conf.example'
   'public_html.conf.example'
 )
 
 build() {
-	install -Dm775 spawn-fcgi-php ${pkgdir}/etc/rc.d/spawn-fcgi-php || return 1 
-	install -Dm664 spawn-fcgi-php.conf ${pkgdir}/etc/conf.d/spawn-fcgi-php.conf || return 1
-  for _conf in php.conf.example nginx.conf.example public_html.conf.example; do
-  	install -Dm664 $_conf ${pkgdir}/etc/nginx/conf/$_conf || return 1
-  done
+	# Install script and configuration file
+	install -Dm775 spawn-fcgi-php \
+		${pkgdir}/etc/rc.d/spawn-fcgi-php || return 1 
+	install -Dm664 spawn-fcgi-php.conf \
+		${pkgdir}/etc/conf.d/spawn-fcgi-php.conf || return 1
+
+	# Install examples of configuration
+	install -Dm664 public_html.conf.example \
+		${pkgdir}/etc/nginx/conf/public_html.conf.example || return 1
+	install -Dm644 server.conf.example \
+		${pkgdir}/etc/nginx/conf/server.conf.example || return 1
+  	install -Dm664 nginx.conf.example \
+		${pkgdir}/etc/nginx/conf/nginx.conf.example || return 1
 }
 
 # vim:set ts=2 sw=2 et ft=sh:
-md5sums=('2522feea95cb5126a175dfb435aa2a35'
-         'a8bfb0b50120c91449c8a08144706c9b'
-         '3f9de59b7a95dc535e66d9886a5a3f5b'
-         'b627706e66338277e3e8557713e2bb2a'
-         '3c3f7e07493a833b231ae20cc0717be5')
-md5sums=('742dad2a81411f09a31cba0dd41ad745'
+md5sums=('d6bacf5512b108b3f31c3dfa52923974'
          'a8bfb0b50120c91449c8a08144706c9b'
          'c02189e88531386cd67d3401924c18ae'
-         '4c600eba213836b56049ef2403b264db'
+         '00bf49fc8a0d8c9f6c96305fae8471d4'
          '9202545dc3701d5933804890312667e6')
