@@ -36,12 +36,14 @@ check_config(){ #{{{
 #===============================================================================
 	# testing DAEMON 
 	if [ ! -x "$DAEMON" ]; then
-		echo "File $DAEMON isn't executable"
+		stat_fail
+		stat_busy "File $DAEMON isn't executable"
 		stat_die
 	fi
 	# testing USER and GROUP
 	if [ -z "$USER" -o -z "$GROUP" ]; then
-		echo "The variable USER/GROUP isn't defined. I cann't run process $PHPCGI as root."
+		stat_fail
+		stat_busy "The variable USER/GROUP isn't defined. I cann't run process $PHPCGI as root."
 		stat_die
 	fi
 	# testing directory of socket
@@ -66,11 +68,13 @@ check_config(){ #{{{
 	fi
 	# testing the program php-cgi
 	if [ -z "$PHPCGI" ]; then
-		echo "The variable PHPCGI isn't defined"
+		stat_fail
+		stat_busy "The variable PHPCGI isn't defined"
 		stat_die
 	else
 		if [ ! -x "$PHPCGI" ]; then
-			echo "The program $PHPCGI isn't executable"
+			stat_fail
+			stat_busy "The program $PHPCGI isn't executable"
 			stat_die
 		fi
 	fi
@@ -159,7 +163,7 @@ start(){ #{{{
 		stat_done || \
 		stat_die
 
-	stat_busy "Starting server $NAME"
+	stat_busy "Starting server $NAME" #{{{
 	check_process $PHPCGI $PIDFILE
 	local error=$?
 	if [ $error -ge $PROCRUNPIDEXIST -a $error -le $PROCRUNPIDNO ]; then
@@ -190,8 +194,8 @@ start(){ #{{{
 	else
 		stat_die
 	fi
-
-	# start daemons for multiusers
+	#}}}
+	#{{{ start daemons for multiusers
 	if [ -n "$STARTMULTI" ]; then
 		stat_busy "Starting server $NAME for multiusers"
 		gen_all_uid
@@ -246,6 +250,7 @@ start(){ #{{{
 			stat_done
 		fi
 	fi
+	#}}}
 } #}}}
 stop(){ #{{{
 #===  FUNCTION  ================================================================
@@ -254,7 +259,7 @@ stop(){ #{{{
 #    PARAMETERS:  -
 #       RETURNS:  -
 #===============================================================================
-	stat_busy "Stopping server $NAME"
+	stat_busy "Stopping server $NAME" #{{{
 	# for main daemon
 	if ! get_pid $PHPCGI &>/dev/null; then
 		stat_fail
@@ -289,8 +294,8 @@ stop(){ #{{{
 			fi
 		fi
 	fi
-
-	# for multiusers
+	#}}}
+	#{{{ for multiusers
 	if [ -n "$STARTMULTI" ]; then
 		# waiting to kill the main daemon
 		sleep 1
@@ -310,6 +315,7 @@ stop(){ #{{{
 			stat_done
 		fi
 	fi
+	#}}}
 } #}}}
 restart(){ #{{{
 #===  FUNCTION  ================================================================
