@@ -1,40 +1,23 @@
 # Maintainer: Atilla ÖNTAŞ <tarakbumba@gmail.com>
 #Contributor: Mitchell Nemitz <mitchell.nemitz@gmail.com>
 pkgname=xdg-su
-pkgver=20111028
+pkgver=1.1
 pkgrel=1
 pkgdesc="Run a program as root with a graphical interface"
 arch=('any')
 url="https://github.com/tarakbumba/xdg-su"
 license=('mit')
-makedepends=('links' 'xmlto' 'git')
-options=()
-install=
-source=()
-
-_gitroot="https://github.com/tarakbumba/xdg-su.git"
-_gitname="xdg-su"
+makedepends=('links' 'xmlto')
+source=( "https://github.com/downloads/tarakbumba/$pkgname/$pkgname-$pkgver.tar.xz" )
+md5sums=('8322419a4ea2f4611380fe48b7001021')
 
 build() {
-  cd "$srcdir"
-  msg "Connecting to GIT server...."
-
-  if [ -d $_gitname ] ; then
-    cd $_gitname && git pull origin
-    msg "The local files are updated."
-  else
-    git clone $_gitroot $_gitname
-  fi
-
-  msg "GIT checkout done or server timeout"
-  msg "Starting make..."
-
-cd "$srcdir/$_gitname"
-./configure --prefix=/usr
-make
+    cd "${srcdir}/${pkgname}-${pkgver}"
+    ./configure --prefix=/usr
+    make
 }
 
 package() {
-    cd "$srcdir/$_gitname"
+    cd "${srcdir}/${pkgname}-${pkgver}"
     make DESTDIR="${pkgdir}" install
 }
