@@ -1,3 +1,8 @@
+2011-10-28  Andre Wayand <aur-davical@awayand.sleepmail.com>
+
+	* fixed depends() by adding > to awl, = alone doesn't work
+
+
 2011-10-26  Andre Wayand <aur-davical@awayand.sleepmail.com>
 
 	* updated to latest version 0.9.9.7
